# imeji

./: .gitignore  Cargo.toml  ImejiWinForms.csproj  MainForm.Designer.cs  MainForm.cs  Program.cs  README.md  app.manifest  app.rc  build.rs
.github/workflows/: rust.yml
Controls/: ImageViewerControl.cs
Models/: ImageState.cs
Properties/: Settings.Designer.cs  Settings.settings
Services/: ImageLoader.cs
Utils/: AnimationHelper.cs  WindowsThemeHelper.cs
src/: main.rs  wic.rs
