[package]
name = "imeji"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[[bin]]
name = "imeji"
path = "src/main.rs"

[target.'cfg(windows)'.bin.imeji]
subsystem = "windows"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true


[dependencies]
eframe = { version = "*", features = ["persistence"] }
windows = { version = "0.58", features = ["Win32_Graphics_Imaging", "Win32_System_Com", "Win32_Foundation", "Win32_System_SystemServices", "Win32_Storage_FileSystem", "Win32_System_Memory", "Win32_Security"] }
argh = "*"

[build-dependencies]
winres = "0.1"